--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ input {
   margin-bottom:  10px; 
 } */
 
-@media screen and (max-width: 390px) {
+@media screen and (min-width: 375px) {
 
   #root {
     display: flex;
