correcion de tamano

--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ body {
     border: none;
     border-bottom: solid 3px #718c6e;
     background: transparent;
-    min-width: 100%;
+    min-width: 330px;
     box-sizing: border-box;
     transition: all 0.3s linear;
     color: 24342B;
