se dieron estilos de error que faltaban

--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,7 @@ body {
     margin-top: 1em;
   }
 
-  #inputUserError.imputname {
+  .imputname {
     font-size: 20px;
     border: none;
     border-bottom: solid 3px #718c6e;
@@ -40,6 +40,7 @@ body {
     transition: all 0.3s linear;
     color: 24342B;
     font-weight: 400;
+    outline: none;
   }
 
   
@@ -74,20 +75,31 @@ body {
     margin-top: -2px; /* Ajusta la distancia entre el triángulo y el globo */
   }
   
-  
-  
-  
-  
-  
-  
 
   #spanErrorPassStyle {
-    display: inline-block;  
-    margin-left: 10px;
-    color: #570b63;
-    
+    display: inline-block;
+    visibility: hidden;
+    background-color: #570b63; /* Color de fondo del globo */
+    color: white; /* Color del texto dentro del globo */
+    border-radius: 10px; /* Bordes redondeados para el globo */
+    padding: 10px 20px; /* Espaciado interno del globo */
+    position: relative;
+    max-width: 300px; /* Ancho máximo del globo */
+    margin-left: 0px; /* Espacio entre el globo y el elemento al que pertenece */
+    margin-top: 10px; /* Ajusta la distancia entre el globo y el elemento */
   }
 
+  #spanErrorPassStyle::before {
+    content: "";
+    position: absolute;
+    bottom: 100%; /* Cambiar "top" a "bottom" */
+    left: 50%;
+    margin-left: -15px; /* Posicionamiento de la punta del globo en el centro */
+    border-width: 15px;
+    border-style: solid;
+    border-color: transparent transparent #570b63 transparent; /* Cambiar el orden de los colores para que la punta apunte hacia abajo */
+    margin-top: -2px; /* Ajusta la distancia entre el triángulo y el globo */
+  }
 
   .imputpass {
     font-size: 20px;
@@ -99,6 +111,7 @@ body {
     transition: all 0.3s linear;
     color: 24342B;
     font-weight: 400;
+    outline: none;
   }
 
   h4 {
@@ -142,6 +155,6 @@ body {
     width: 3em;
     position: relative;
     left: -9em;
-    top: -7em;
+    top: -5em;
   }
 
