--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-@media screen and (min-width: 375px) {
+/* @media screen and (min-width: 375px) { */
   #root {
     display: flex;
     flex-direction: column;
@@ -46,7 +46,7 @@ body {
   
     
     
-  }
+  /* } */
 
 
 
