--- a/src/style.css
+++ b/src/style.css
@@ -49,10 +49,10 @@ body {
   #inputPost{
     margin-top: 60px;
     font-size: 20px;
-    background-color: transparent;
     border: none;
     border-radius: 0.9375rem;
     background: #EDEDED;
+    background-color: transparent;
     min-width: 300px;
     height: 3.5625rem;
     box-sizing: border-box;
@@ -69,12 +69,12 @@ body {
   }
   
 .comentario-input{
-    background-color: transparent;
     border: none;
     border-radius: 0.9375rem;
     background: #EDEDED;
+    background-color: transparent;
     min-width: 300px;
-    height: 3.5625rem;
+    height: auto;
     box-sizing: border-box;
     display: block;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
@@ -226,7 +226,7 @@ body {
   
   /*Estilos Create Post*/
 
-  .container{
+ /* .container{
     width: 500px;
     height: 480px;
     overflow: hidden;
@@ -383,4 +383,5 @@ body {
   }
   form textarea:valid ~ button:hover{
     background: #1a81ff;
-  }
+  }*/
+  
