--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,7 @@ body {
     font-size: 20px;
     border: none;
     border-radius: 0.9375rem;
-    background-color: transparent;
+    /*background-color: transparent;*/
     background: #ededed;
     min-width: 300px;
     height: fit-content;
@@ -69,7 +69,7 @@ body {
 .comentario-input {
   border: none;
   border-radius: 0.9375rem;
-  background-color: transparent;
+  /*background-color: transparent;*/
   background: #ededed;
   min-width: 300px;
   height: fit-content;
